--- a/styles.css
+++ b/styles.css
@@ -99,17 +99,27 @@ img {
 .services .card {
   max-width: 33.333%;
   margin: 1.5rem;
+  -webkit-box-flex: 1.3344;
+      -ms-flex: 1.3344;
+          flex: 1.3344;
 }
 
-.services .card .card-img {
+.services .card .card-img img {
   border-top-left-radius: 14px;
   border-top-right-radius: 14px;
+  height: auto;
+  vertical-align: middle;
 }
 
 .services .card .card-desc {
   border-bottom-left-radius: 14px;
   border-bottom-right-radius: 14px;
-  -webkit-box-shadow: 0px 1px 50px 7px rgba(0, 0, 0, 0.75);
-          box-shadow: 0px 1px 50px 7px rgba(0, 0, 0, 0.75);
+  border: 3px solid #D7D7D7CF;
+  border-top: 0px;
+  padding: 10px 20px;
+}
+
+.services .card .card-desc p {
+  margin: 15px 0px;
 }
 /*# sourceMappingURL=styles.css.map */
