--- a/styles.scss
+++ b/styles.scss
@@ -81,14 +81,22 @@ img{
     .card {
         max-width: 33.333%;
         margin: 1.5rem;
-        .card-img{
+        flex: 1.3344;
+        .card-img img{
             border-top-left-radius: 14px;
             border-top-right-radius: 14px;
+            height: auto;
+            vertical-align: middle;
         }
         .card-desc{
             border-bottom-left-radius: 14px;
             border-bottom-right-radius: 14px;
-            box-shadow: 0px 1px 50px 7px rgba(0,0,0,0.75);
+            border: 3px solid #D7D7D7CF;
+            border-top: 0px;
+            padding: 10px 20px;
+            p{
+                margin: 15px 0px;
+            }
         }
     }
 }
