--- a/styles.css
+++ b/styles.css
@@ -64,10 +64,6 @@ img {
 
 .banner {
   position: relative;
-  min-height: 80vh;
-  background-image: url("assets/main-banner.png");
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 .banner .header {
@@ -80,6 +76,7 @@ img {
 .banner .banner-footer {
   position: absolute;
   bottom: 0;
+  left: 0;
 }
 
 .banner h1, .banner h3 {
@@ -268,5 +265,193 @@ img {
 
 .subheading a:hover {
   color: #fff;
+}
+
+@media screen and (max-width: 1100px) {
+  .banner .header {
+    top: 5rem;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .banner .header {
+    top: 4rem;
+    width: 40%;
+    left: 11rem;
+  }
+  .heading {
+    width: 60%;
+  }
+  .services {
+    display: block;
+  }
+  .services .card {
+    max-width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .services .card .card-img {
+    max-width: 40%;
+  }
+  .services .card .card-img img {
+    border-radius: 0px;
+    border-top-left-radius: 14px;
+    border-bottom-left-radius: 14px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    height: auto;
+    min-height: 100%;
+  }
+  .services .card .card-desc {
+    max-width: 60%;
+    border-radius: 0px;
+    border-top-right-radius: 14px;
+    border-bottom-right-radius: 14px;
+    border: 3px solid #D7D7D7CF;
+    border-left: 0px;
+  }
+}
+
+@media screen and (max-width: 1003px) {
+  .banner .header {
+    width: 41%;
+    left: 9rem;
+  }
+}
+
+@media screen and (max-width: 979px) {
+  .banner .header {
+    width: 43%;
+  }
+}
+
+@media screen and (max-width: 932px) {
+  .heading {
+    width: 79%;
+  }
+}
+
+@media screen and (max-width: 892px) {
+  .banner .header {
+    width: 47%;
+    left: 8rem;
+    top: 3rem;
+  }
+}
+
+@media screen and (max-width: 889px) {
+  .services .card .card-desc {
+    max-width: 52%;
+  }
+  .services .card .card-img {
+    max-width: 47%;
+  }
+}
+
+@media screen and (max-width: 860px) {
+  .banner .header {
+    width: 50%;
+    left: 7rem;
+    top: 2rem;
+  }
+}
+
+@media screen and (max-width: 824px) {
+  .banner .header {
+    width: 51%;
+    left: 6rem;
+  }
+}
+
+@media screen and (max-width: 796px) {
+  h1 {
+    font-size: 30px;
+  }
+  h2 {
+    font-size: 24px;
+  }
+  h3 {
+    font-size: 20px;
+  }
+  p {
+    font-size: 16px;
+  }
+  .banner .header {
+    width: 51%;
+    left: 6rem;
+  }
+}
+
+@media screen and (max-width: 658px) {
+  .banner .header {
+    top: 1rem;
+    left: 5rem;
+  }
+}
+
+@media screen and (max-width: 620px) {
+  .banner {
+    min-height: 33vh;
+    background-image: url("assets/main-banner.png");
+    background-size: cover;
+  }
+  .banner .banner-img {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 570px) {
+  .banner .header {
+    width: 59%;
+  }
+  .services {
+    width: 95%;
+  }
+  .services .card {
+    display: block;
+  }
+  .services .card .card-img, .services .card .card-desc {
+    max-width: 100%;
+  }
+  .services .card .card-img img {
+    border-radius: 0px;
+    border-top-left-radius: 14px;
+    border-top-right-radius: 14px;
+  }
+  .services .card .card-desc {
+    border-radius: 0px;
+    border-bottom-left-radius: 14px;
+    border-bottom-right-radius: 14px;
+    border: 3px solid #D7D7D7CF;
+    border-top: none;
+  }
+}
+
+@media screen and (max-width: 454px) {
+  .banner {
+    min-height: 34vh;
+  }
+  .banner .header {
+    width: 74%;
+    top: 1rem;
+    left: 2rem;
+  }
+}
+
+@media screen and (max-width: 413px) {
+  .banner {
+    min-height: 36vh;
+  }
+  .banner h1 {
+    margin: 0.47em 0;
+  }
+  .banner .header {
+    width: 78%;
+    top: 0rem;
+  }
+  button {
+    margin-top: 1rem;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
