--- a/styles.scss
+++ b/styles.scss
@@ -414,3 +414,22 @@ img{
         margin-top: 1rem;
     }
 }
+@media screen and (max-width: 321px) {
+    .float-nav > a.menu-btn {
+        padding: 12px 14px 6px 13px;
+        > .menu-txt {
+            font-size: 9px;
+        }
+    }
+    .banner{
+        h1 {
+            font-size: 25px;
+        }
+        h3{
+            font-size: 16px;
+        }
+        button{
+            font-size: 14px;
+        }
+    } 
+}
